--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,5 +7,6 @@ jobs:
       matrix:
         python-version: ['3.8']
     steps:
-      - run: pip install -r requirements-dev.txt
+      - run: ls
+      - run: pip install -r ./requirements-dev.txt
       - run: pytest
