--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,6 +7,7 @@ jobs:
       matrix:
         python-version: ['3.8']
     steps:
+      - uses: actions/checkout@v2
       - run: ls
       - run: pip install -r ./requirements-dev.txt
       - run: pytest
