--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: Easy Tests
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  Lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -10,4 +10,14 @@ jobs:
       - uses: actions/checkout@v2
       - run: ls
       - run: pip install -r ./requirements-dev.txt
-      - run: pytest
+      - run: flake8
+  Tests:
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          python-version: ['3.8']
+      steps:
+        - uses: actions/checkout@v2
+        - run: ls
+        - run: pip install -r ./requirements-dev.txt
+        - run: pytest
