--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,7 @@ jobs:
       - run: ls
       - run: pip install -r ./requirements-dev.txt
       - run: flake8
+  
   Tests:
       runs-on: ubuntu-latest
       strategy:
@@ -21,3 +22,31 @@ jobs:
         - run: ls
         - run: pip install -r ./requirements-dev.txt
         - run: pytest
+  build:
+      runs-on: ubuntu-latest
+      steps:
+    
+        - name: Check Out Repo 
+          uses: actions/checkout@v2
+
+        - name: Login to Docker Hub
+          uses: docker/login-action@v1
+          with:
+            username: ${{ secrets.DOCKER_HUB_USERNAME }}
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+        - name: Set up Docker Buildx
+          id: buildx
+          uses: docker/setup-buildx-action@v1
+
+        - name: Build and push
+          id: docker_build
+          uses: docker/build-push-action@v2
+          with:
+            context: ./
+            file: ./Dockerfile
+            push: true
+            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/flask_demo:latest
+
+        - name: Image digest
+          run: echo ${{ steps.docker_build.outputs.digest }}
